// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbTimezone check OIbTimezone with value="" and valid funtion 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <select
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
    >
      <option
        value="Etc/UTC"
      >
        Etc/UTC
      </option>
      <option
        value="Etc/GMT+12"
      >
        Etc/GMT+12
      </option>
      <option
        value="Pacific/Midway"
      >
        Pacific/Midway
      </option>
      <option
        value="Pacific/Honolulu"
      >
        Pacific/Honolulu
      </option>
      <option
        value="Pacific/Marquesas"
      >
        Pacific/Marquesas
      </option>
      <option
        value="America/Anchorage"
      >
        America/Anchorage
      </option>
      <option
        value="Pacific/Pitcairn"
      >
        Pacific/Pitcairn
      </option>
      <option
        value="America/Los_Angeles"
      >
        America/Los_Angeles
      </option>
      <option
        value="America/Tijuana"
      >
        America/Tijuana
      </option>
      <option
        value="America/Chihuahua"
      >
        America/Chihuahua
      </option>
      <option
        value="America/Denver"
      >
        America/Denver
      </option>
      <option
        value="America/Phoenix"
      >
        America/Phoenix
      </option>
      <option
        value="America/Chicago"
      >
        America/Chicago
      </option>
      <option
        value="America/Guatemala"
      >
        America/Guatemala
      </option>
      <option
        value="America/Mexico_City"
      >
        America/Mexico_City
      </option>
      <option
        value="America/Regina"
      >
        America/Regina
      </option>
      <option
        value="America/Bogota"
      >
        America/Bogota
      </option>
      <option
        value="America/Indiana/Indianapolis"
      >
        America/Indiana/Indianapolis
      </option>
      <option
        value="America/New_York"
      >
        America/New_York
      </option>
      <option
        value="America/Caracas"
      >
        America/Caracas
      </option>
      <option
        value="America/Guyana"
      >
        America/Guyana
      </option>
      <option
        value="America/Halifax"
      >
        America/Halifax
      </option>
      <option
        value="America/La_Paz"
      >
        America/La_Paz
      </option>
      <option
        value="America/Manaus"
      >
        America/Manaus
      </option>
      <option
        value="America/Santiago"
      >
        America/Santiago
      </option>
      <option
        value="America/St_Johns"
      >
        America/St_Johns
      </option>
      <option
        value="America/Argentina/Buenos_Aires"
      >
        America/Argentina/Buenos_Aires
      </option>
      <option
        value="America/Godthab"
      >
        America/Godthab
      </option>
      <option
        value="America/Montevideo"
      >
        America/Montevideo
      </option>
      <option
        value="America/Sao_Paulo"
      >
        America/Sao_Paulo
      </option>
      <option
        value="Atlantic/South_Georgia"
      >
        Atlantic/South_Georgia
      </option>
      <option
        value="Atlantic/Azores"
      >
        Atlantic/Azores
      </option>
      <option
        value="Atlantic/Cape_Verde"
      >
        Atlantic/Cape_Verde
      </option>
      <option
        value="Africa/Casablanca"
      >
        Africa/Casablanca
      </option>
      <option
        value="Africa/Monrovia"
      >
        Africa/Monrovia
      </option>
      <option
        value="Europe/London"
      >
        Europe/London
      </option>
      <option
        value="Africa/Algiers"
      >
        Africa/Algiers
      </option>
      <option
        value="Africa/Windhoek"
      >
        Africa/Windhoek
      </option>
      <option
        value="Europe/Belgrade"
      >
        Europe/Belgrade
      </option>
      <option
        value="Europe/Berlin"
      >
        Europe/Berlin
      </option>
      <option
        value="Europe/Brussels"
      >
        Europe/Brussels
      </option>
      <option
        value="Europe/Warsaw"
      >
        Europe/Warsaw
      </option>
      <option
        value="Africa/Cairo"
      >
        Africa/Cairo
      </option>
      <option
        value="Africa/Harare"
      >
        Africa/Harare
      </option>
      <option
        value="Asia/Amman"
      >
        Asia/Amman
      </option>
      <option
        value="Asia/Beirut"
      >
        Asia/Beirut
      </option>
      <option
        value="Asia/Jerusalem"
      >
        Asia/Jerusalem
      </option>
      <option
        value="Europe/Athens"
      >
        Europe/Athens
      </option>
      <option
        value="Europe/Helsinki"
      >
        Europe/Helsinki
      </option>
      <option
        value="Europe/Minsk"
      >
        Europe/Minsk
      </option>
      <option
        value="Europe/Paris"
      >
        Europe/Paris
      </option>
      <option
        value="Africa/Nairobi"
      >
        Africa/Nairobi
      </option>
      <option
        value="Asia/Baghdad"
      >
        Asia/Baghdad
      </option>
      <option
        value="Asia/Kuwait"
      >
        Asia/Kuwait
      </option>
      <option
        value="Europe/Moscow"
      >
        Europe/Moscow
      </option>
      <option
        value="Asia/Tehran"
      >
        Asia/Tehran
      </option>
      <option
        value="Asia/Baku"
      >
        Asia/Baku
      </option>
      <option
        value="Asia/Muscat"
      >
        Asia/Muscat
      </option>
      <option
        value="Asia/Tbilisi"
      >
        Asia/Tbilisi
      </option>
      <option
        value="Asia/Yerevan"
      >
        Asia/Yerevan
      </option>
      <option
        value="Asia/Kabul"
      >
        Asia/Kabul
      </option>
      <option
        value="Asia/Karachi"
      >
        Asia/Karachi
      </option>
      <option
        value="Asia/Tashkent"
      >
        Asia/Tashkent
      </option>
      <option
        value="Asia/Yekaterinburg"
      >
        Asia/Yekaterinburg
      </option>
      <option
        value="Asia/Colombo"
      >
        Asia/Colombo
      </option>
      <option
        value="Asia/Kolkata"
      >
        Asia/Kolkata
      </option>
      <option
        value="Asia/Kathmandu"
      >
        Asia/Kathmandu
      </option>
      <option
        value="Asia/Dhaka"
      >
        Asia/Dhaka
      </option>
      <option
        value="Asia/Novosibirsk"
      >
        Asia/Novosibirsk
      </option>
      <option
        value="Asia/Rangoon"
      >
        Asia/Rangoon
      </option>
      <option
        value="Asia/Bangkok"
      >
        Asia/Bangkok
      </option>
      <option
        value="Asia/Krasnoyarsk"
      >
        Asia/Krasnoyarsk
      </option>
      <option
        value="Asia/Hong_Kong"
      >
        Asia/Hong_Kong
      </option>
      <option
        value="Asia/Irkutsk"
      >
        Asia/Irkutsk
      </option>
      <option
        value="Asia/Kuala_Lumpur"
      >
        Asia/Kuala_Lumpur
      </option>
      <option
        value="Asia/Taipei"
      >
        Asia/Taipei
      </option>
      <option
        value="Australia/Perth"
      >
        Australia/Perth
      </option>
      <option
        value="Asia/Seoul"
      >
        Asia/Seoul
      </option>
      <option
        value="Asia/Tokyo"
      >
        Asia/Tokyo
      </option>
      <option
        value="Asia/Yakutsk"
      >
        Asia/Yakutsk
      </option>
      <option
        value="Australia/Adelaide"
      >
        Australia/Adelaide
      </option>
      <option
        value="Australia/Darwin"
      >
        Australia/Darwin
      </option>
      <option
        value="Asia/Vladivostok"
      >
        Asia/Vladivostok
      </option>
      <option
        value="Australia/Brisbane"
      >
        Australia/Brisbane
      </option>
      <option
        value="Australia/Hobart"
      >
        Australia/Hobart
      </option>
      <option
        value="Australia/Sydney"
      >
        Australia/Sydney
      </option>
      <option
        value="Pacific/Guam"
      >
        Pacific/Guam
      </option>
      <option
        value="Australia/Lord_Howe"
      >
        Australia/Lord_Howe
      </option>
      <option
        value="Asia/Magadan"
      >
        Asia/Magadan
      </option>
      <option
        value="Pacific/Norfolk"
      >
        Pacific/Norfolk
      </option>
      <option
        value="Pacific/Auckland"
      >
        Pacific/Auckland
      </option>
      <option
        value="Pacific/Fiji"
      >
        Pacific/Fiji
      </option>
      <option
        value="Pacific/Tongatapu"
      >
        Pacific/Tongatapu
      </option>
    </select>
    <div
      class="invalid-feedback"
    >
      Value should not be empty
    </div>
    <small
      class="form-text text-muted"
    >
      <div>
        Time Zone
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbTimezone check OIbTimezone with value="Europe/Paris" and help 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <select
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
    >
      <option
        value="Etc/UTC"
      >
        Etc/UTC
      </option>
      <option
        value="Etc/GMT+12"
      >
        Etc/GMT+12
      </option>
      <option
        value="Pacific/Midway"
      >
        Pacific/Midway
      </option>
      <option
        value="Pacific/Honolulu"
      >
        Pacific/Honolulu
      </option>
      <option
        value="Pacific/Marquesas"
      >
        Pacific/Marquesas
      </option>
      <option
        value="America/Anchorage"
      >
        America/Anchorage
      </option>
      <option
        value="Pacific/Pitcairn"
      >
        Pacific/Pitcairn
      </option>
      <option
        value="America/Los_Angeles"
      >
        America/Los_Angeles
      </option>
      <option
        value="America/Tijuana"
      >
        America/Tijuana
      </option>
      <option
        value="America/Chihuahua"
      >
        America/Chihuahua
      </option>
      <option
        value="America/Denver"
      >
        America/Denver
      </option>
      <option
        value="America/Phoenix"
      >
        America/Phoenix
      </option>
      <option
        value="America/Chicago"
      >
        America/Chicago
      </option>
      <option
        value="America/Guatemala"
      >
        America/Guatemala
      </option>
      <option
        value="America/Mexico_City"
      >
        America/Mexico_City
      </option>
      <option
        value="America/Regina"
      >
        America/Regina
      </option>
      <option
        value="America/Bogota"
      >
        America/Bogota
      </option>
      <option
        value="America/Indiana/Indianapolis"
      >
        America/Indiana/Indianapolis
      </option>
      <option
        value="America/New_York"
      >
        America/New_York
      </option>
      <option
        value="America/Caracas"
      >
        America/Caracas
      </option>
      <option
        value="America/Guyana"
      >
        America/Guyana
      </option>
      <option
        value="America/Halifax"
      >
        America/Halifax
      </option>
      <option
        value="America/La_Paz"
      >
        America/La_Paz
      </option>
      <option
        value="America/Manaus"
      >
        America/Manaus
      </option>
      <option
        value="America/Santiago"
      >
        America/Santiago
      </option>
      <option
        value="America/St_Johns"
      >
        America/St_Johns
      </option>
      <option
        value="America/Argentina/Buenos_Aires"
      >
        America/Argentina/Buenos_Aires
      </option>
      <option
        value="America/Godthab"
      >
        America/Godthab
      </option>
      <option
        value="America/Montevideo"
      >
        America/Montevideo
      </option>
      <option
        value="America/Sao_Paulo"
      >
        America/Sao_Paulo
      </option>
      <option
        value="Atlantic/South_Georgia"
      >
        Atlantic/South_Georgia
      </option>
      <option
        value="Atlantic/Azores"
      >
        Atlantic/Azores
      </option>
      <option
        value="Atlantic/Cape_Verde"
      >
        Atlantic/Cape_Verde
      </option>
      <option
        value="Africa/Casablanca"
      >
        Africa/Casablanca
      </option>
      <option
        value="Africa/Monrovia"
      >
        Africa/Monrovia
      </option>
      <option
        value="Europe/London"
      >
        Europe/London
      </option>
      <option
        value="Africa/Algiers"
      >
        Africa/Algiers
      </option>
      <option
        value="Africa/Windhoek"
      >
        Africa/Windhoek
      </option>
      <option
        value="Europe/Belgrade"
      >
        Europe/Belgrade
      </option>
      <option
        value="Europe/Berlin"
      >
        Europe/Berlin
      </option>
      <option
        value="Europe/Brussels"
      >
        Europe/Brussels
      </option>
      <option
        value="Europe/Warsaw"
      >
        Europe/Warsaw
      </option>
      <option
        value="Africa/Cairo"
      >
        Africa/Cairo
      </option>
      <option
        value="Africa/Harare"
      >
        Africa/Harare
      </option>
      <option
        value="Asia/Amman"
      >
        Asia/Amman
      </option>
      <option
        value="Asia/Beirut"
      >
        Asia/Beirut
      </option>
      <option
        value="Asia/Jerusalem"
      >
        Asia/Jerusalem
      </option>
      <option
        value="Europe/Athens"
      >
        Europe/Athens
      </option>
      <option
        value="Europe/Helsinki"
      >
        Europe/Helsinki
      </option>
      <option
        value="Europe/Minsk"
      >
        Europe/Minsk
      </option>
      <option
        value="Europe/Paris"
      >
        Europe/Paris
      </option>
      <option
        value="Africa/Nairobi"
      >
        Africa/Nairobi
      </option>
      <option
        value="Asia/Baghdad"
      >
        Asia/Baghdad
      </option>
      <option
        value="Asia/Kuwait"
      >
        Asia/Kuwait
      </option>
      <option
        value="Europe/Moscow"
      >
        Europe/Moscow
      </option>
      <option
        value="Asia/Tehran"
      >
        Asia/Tehran
      </option>
      <option
        value="Asia/Baku"
      >
        Asia/Baku
      </option>
      <option
        value="Asia/Muscat"
      >
        Asia/Muscat
      </option>
      <option
        value="Asia/Tbilisi"
      >
        Asia/Tbilisi
      </option>
      <option
        value="Asia/Yerevan"
      >
        Asia/Yerevan
      </option>
      <option
        value="Asia/Kabul"
      >
        Asia/Kabul
      </option>
      <option
        value="Asia/Karachi"
      >
        Asia/Karachi
      </option>
      <option
        value="Asia/Tashkent"
      >
        Asia/Tashkent
      </option>
      <option
        value="Asia/Yekaterinburg"
      >
        Asia/Yekaterinburg
      </option>
      <option
        value="Asia/Colombo"
      >
        Asia/Colombo
      </option>
      <option
        value="Asia/Kolkata"
      >
        Asia/Kolkata
      </option>
      <option
        value="Asia/Kathmandu"
      >
        Asia/Kathmandu
      </option>
      <option
        value="Asia/Dhaka"
      >
        Asia/Dhaka
      </option>
      <option
        value="Asia/Novosibirsk"
      >
        Asia/Novosibirsk
      </option>
      <option
        value="Asia/Rangoon"
      >
        Asia/Rangoon
      </option>
      <option
        value="Asia/Bangkok"
      >
        Asia/Bangkok
      </option>
      <option
        value="Asia/Krasnoyarsk"
      >
        Asia/Krasnoyarsk
      </option>
      <option
        value="Asia/Hong_Kong"
      >
        Asia/Hong_Kong
      </option>
      <option
        value="Asia/Irkutsk"
      >
        Asia/Irkutsk
      </option>
      <option
        value="Asia/Kuala_Lumpur"
      >
        Asia/Kuala_Lumpur
      </option>
      <option
        value="Asia/Taipei"
      >
        Asia/Taipei
      </option>
      <option
        value="Australia/Perth"
      >
        Australia/Perth
      </option>
      <option
        value="Asia/Seoul"
      >
        Asia/Seoul
      </option>
      <option
        value="Asia/Tokyo"
      >
        Asia/Tokyo
      </option>
      <option
        value="Asia/Yakutsk"
      >
        Asia/Yakutsk
      </option>
      <option
        value="Australia/Adelaide"
      >
        Australia/Adelaide
      </option>
      <option
        value="Australia/Darwin"
      >
        Australia/Darwin
      </option>
      <option
        value="Asia/Vladivostok"
      >
        Asia/Vladivostok
      </option>
      <option
        value="Australia/Brisbane"
      >
        Australia/Brisbane
      </option>
      <option
        value="Australia/Hobart"
      >
        Australia/Hobart
      </option>
      <option
        value="Australia/Sydney"
      >
        Australia/Sydney
      </option>
      <option
        value="Pacific/Guam"
      >
        Pacific/Guam
      </option>
      <option
        value="Australia/Lord_Howe"
      >
        Australia/Lord_Howe
      </option>
      <option
        value="Asia/Magadan"
      >
        Asia/Magadan
      </option>
      <option
        value="Pacific/Norfolk"
      >
        Pacific/Norfolk
      </option>
      <option
        value="Pacific/Auckland"
      >
        Pacific/Auckland
      </option>
      <option
        value="Pacific/Fiji"
      >
        Pacific/Fiji
      </option>
      <option
        value="Pacific/Tongatapu"
      >
        Pacific/Tongatapu
      </option>
    </select>
    <div
      class="invalid-feedback"
    />
    <small
      class="form-text text-muted"
    >
      <div>
        helpt text
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbTimezone check OIbTimezone with value="Europe/Paris" and no label 1`] = `
<div>
  <div
    class="form-group"
  >
    <select
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
    >
      <option
        value="Etc/UTC"
      >
        Etc/UTC
      </option>
      <option
        value="Etc/GMT+12"
      >
        Etc/GMT+12
      </option>
      <option
        value="Pacific/Midway"
      >
        Pacific/Midway
      </option>
      <option
        value="Pacific/Honolulu"
      >
        Pacific/Honolulu
      </option>
      <option
        value="Pacific/Marquesas"
      >
        Pacific/Marquesas
      </option>
      <option
        value="America/Anchorage"
      >
        America/Anchorage
      </option>
      <option
        value="Pacific/Pitcairn"
      >
        Pacific/Pitcairn
      </option>
      <option
        value="America/Los_Angeles"
      >
        America/Los_Angeles
      </option>
      <option
        value="America/Tijuana"
      >
        America/Tijuana
      </option>
      <option
        value="America/Chihuahua"
      >
        America/Chihuahua
      </option>
      <option
        value="America/Denver"
      >
        America/Denver
      </option>
      <option
        value="America/Phoenix"
      >
        America/Phoenix
      </option>
      <option
        value="America/Chicago"
      >
        America/Chicago
      </option>
      <option
        value="America/Guatemala"
      >
        America/Guatemala
      </option>
      <option
        value="America/Mexico_City"
      >
        America/Mexico_City
      </option>
      <option
        value="America/Regina"
      >
        America/Regina
      </option>
      <option
        value="America/Bogota"
      >
        America/Bogota
      </option>
      <option
        value="America/Indiana/Indianapolis"
      >
        America/Indiana/Indianapolis
      </option>
      <option
        value="America/New_York"
      >
        America/New_York
      </option>
      <option
        value="America/Caracas"
      >
        America/Caracas
      </option>
      <option
        value="America/Guyana"
      >
        America/Guyana
      </option>
      <option
        value="America/Halifax"
      >
        America/Halifax
      </option>
      <option
        value="America/La_Paz"
      >
        America/La_Paz
      </option>
      <option
        value="America/Manaus"
      >
        America/Manaus
      </option>
      <option
        value="America/Santiago"
      >
        America/Santiago
      </option>
      <option
        value="America/St_Johns"
      >
        America/St_Johns
      </option>
      <option
        value="America/Argentina/Buenos_Aires"
      >
        America/Argentina/Buenos_Aires
      </option>
      <option
        value="America/Godthab"
      >
        America/Godthab
      </option>
      <option
        value="America/Montevideo"
      >
        America/Montevideo
      </option>
      <option
        value="America/Sao_Paulo"
      >
        America/Sao_Paulo
      </option>
      <option
        value="Atlantic/South_Georgia"
      >
        Atlantic/South_Georgia
      </option>
      <option
        value="Atlantic/Azores"
      >
        Atlantic/Azores
      </option>
      <option
        value="Atlantic/Cape_Verde"
      >
        Atlantic/Cape_Verde
      </option>
      <option
        value="Africa/Casablanca"
      >
        Africa/Casablanca
      </option>
      <option
        value="Africa/Monrovia"
      >
        Africa/Monrovia
      </option>
      <option
        value="Europe/London"
      >
        Europe/London
      </option>
      <option
        value="Africa/Algiers"
      >
        Africa/Algiers
      </option>
      <option
        value="Africa/Windhoek"
      >
        Africa/Windhoek
      </option>
      <option
        value="Europe/Belgrade"
      >
        Europe/Belgrade
      </option>
      <option
        value="Europe/Berlin"
      >
        Europe/Berlin
      </option>
      <option
        value="Europe/Brussels"
      >
        Europe/Brussels
      </option>
      <option
        value="Europe/Warsaw"
      >
        Europe/Warsaw
      </option>
      <option
        value="Africa/Cairo"
      >
        Africa/Cairo
      </option>
      <option
        value="Africa/Harare"
      >
        Africa/Harare
      </option>
      <option
        value="Asia/Amman"
      >
        Asia/Amman
      </option>
      <option
        value="Asia/Beirut"
      >
        Asia/Beirut
      </option>
      <option
        value="Asia/Jerusalem"
      >
        Asia/Jerusalem
      </option>
      <option
        value="Europe/Athens"
      >
        Europe/Athens
      </option>
      <option
        value="Europe/Helsinki"
      >
        Europe/Helsinki
      </option>
      <option
        value="Europe/Minsk"
      >
        Europe/Minsk
      </option>
      <option
        value="Europe/Paris"
      >
        Europe/Paris
      </option>
      <option
        value="Africa/Nairobi"
      >
        Africa/Nairobi
      </option>
      <option
        value="Asia/Baghdad"
      >
        Asia/Baghdad
      </option>
      <option
        value="Asia/Kuwait"
      >
        Asia/Kuwait
      </option>
      <option
        value="Europe/Moscow"
      >
        Europe/Moscow
      </option>
      <option
        value="Asia/Tehran"
      >
        Asia/Tehran
      </option>
      <option
        value="Asia/Baku"
      >
        Asia/Baku
      </option>
      <option
        value="Asia/Muscat"
      >
        Asia/Muscat
      </option>
      <option
        value="Asia/Tbilisi"
      >
        Asia/Tbilisi
      </option>
      <option
        value="Asia/Yerevan"
      >
        Asia/Yerevan
      </option>
      <option
        value="Asia/Kabul"
      >
        Asia/Kabul
      </option>
      <option
        value="Asia/Karachi"
      >
        Asia/Karachi
      </option>
      <option
        value="Asia/Tashkent"
      >
        Asia/Tashkent
      </option>
      <option
        value="Asia/Yekaterinburg"
      >
        Asia/Yekaterinburg
      </option>
      <option
        value="Asia/Colombo"
      >
        Asia/Colombo
      </option>
      <option
        value="Asia/Kolkata"
      >
        Asia/Kolkata
      </option>
      <option
        value="Asia/Kathmandu"
      >
        Asia/Kathmandu
      </option>
      <option
        value="Asia/Dhaka"
      >
        Asia/Dhaka
      </option>
      <option
        value="Asia/Novosibirsk"
      >
        Asia/Novosibirsk
      </option>
      <option
        value="Asia/Rangoon"
      >
        Asia/Rangoon
      </option>
      <option
        value="Asia/Bangkok"
      >
        Asia/Bangkok
      </option>
      <option
        value="Asia/Krasnoyarsk"
      >
        Asia/Krasnoyarsk
      </option>
      <option
        value="Asia/Hong_Kong"
      >
        Asia/Hong_Kong
      </option>
      <option
        value="Asia/Irkutsk"
      >
        Asia/Irkutsk
      </option>
      <option
        value="Asia/Kuala_Lumpur"
      >
        Asia/Kuala_Lumpur
      </option>
      <option
        value="Asia/Taipei"
      >
        Asia/Taipei
      </option>
      <option
        value="Australia/Perth"
      >
        Australia/Perth
      </option>
      <option
        value="Asia/Seoul"
      >
        Asia/Seoul
      </option>
      <option
        value="Asia/Tokyo"
      >
        Asia/Tokyo
      </option>
      <option
        value="Asia/Yakutsk"
      >
        Asia/Yakutsk
      </option>
      <option
        value="Australia/Adelaide"
      >
        Australia/Adelaide
      </option>
      <option
        value="Australia/Darwin"
      >
        Australia/Darwin
      </option>
      <option
        value="Asia/Vladivostok"
      >
        Asia/Vladivostok
      </option>
      <option
        value="Australia/Brisbane"
      >
        Australia/Brisbane
      </option>
      <option
        value="Australia/Hobart"
      >
        Australia/Hobart
      </option>
      <option
        value="Australia/Sydney"
      >
        Australia/Sydney
      </option>
      <option
        value="Pacific/Guam"
      >
        Pacific/Guam
      </option>
      <option
        value="Australia/Lord_Howe"
      >
        Australia/Lord_Howe
      </option>
      <option
        value="Asia/Magadan"
      >
        Asia/Magadan
      </option>
      <option
        value="Pacific/Norfolk"
      >
        Pacific/Norfolk
      </option>
      <option
        value="Pacific/Auckland"
      >
        Pacific/Auckland
      </option>
      <option
        value="Pacific/Fiji"
      >
        Pacific/Fiji
      </option>
      <option
        value="Pacific/Tongatapu"
      >
        Pacific/Tongatapu
      </option>
    </select>
    <div
      class="invalid-feedback"
    />
    <small
      class="form-text text-muted"
    >
      <div>
        Time Zone
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbTimezone check Select with value="Europe/Paris" 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <select
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
    >
      <option
        value="Etc/UTC"
      >
        Etc/UTC
      </option>
      <option
        value="Etc/GMT+12"
      >
        Etc/GMT+12
      </option>
      <option
        value="Pacific/Midway"
      >
        Pacific/Midway
      </option>
      <option
        value="Pacific/Honolulu"
      >
        Pacific/Honolulu
      </option>
      <option
        value="Pacific/Marquesas"
      >
        Pacific/Marquesas
      </option>
      <option
        value="America/Anchorage"
      >
        America/Anchorage
      </option>
      <option
        value="Pacific/Pitcairn"
      >
        Pacific/Pitcairn
      </option>
      <option
        value="America/Los_Angeles"
      >
        America/Los_Angeles
      </option>
      <option
        value="America/Tijuana"
      >
        America/Tijuana
      </option>
      <option
        value="America/Chihuahua"
      >
        America/Chihuahua
      </option>
      <option
        value="America/Denver"
      >
        America/Denver
      </option>
      <option
        value="America/Phoenix"
      >
        America/Phoenix
      </option>
      <option
        value="America/Chicago"
      >
        America/Chicago
      </option>
      <option
        value="America/Guatemala"
      >
        America/Guatemala
      </option>
      <option
        value="America/Mexico_City"
      >
        America/Mexico_City
      </option>
      <option
        value="America/Regina"
      >
        America/Regina
      </option>
      <option
        value="America/Bogota"
      >
        America/Bogota
      </option>
      <option
        value="America/Indiana/Indianapolis"
      >
        America/Indiana/Indianapolis
      </option>
      <option
        value="America/New_York"
      >
        America/New_York
      </option>
      <option
        value="America/Caracas"
      >
        America/Caracas
      </option>
      <option
        value="America/Guyana"
      >
        America/Guyana
      </option>
      <option
        value="America/Halifax"
      >
        America/Halifax
      </option>
      <option
        value="America/La_Paz"
      >
        America/La_Paz
      </option>
      <option
        value="America/Manaus"
      >
        America/Manaus
      </option>
      <option
        value="America/Santiago"
      >
        America/Santiago
      </option>
      <option
        value="America/St_Johns"
      >
        America/St_Johns
      </option>
      <option
        value="America/Argentina/Buenos_Aires"
      >
        America/Argentina/Buenos_Aires
      </option>
      <option
        value="America/Godthab"
      >
        America/Godthab
      </option>
      <option
        value="America/Montevideo"
      >
        America/Montevideo
      </option>
      <option
        value="America/Sao_Paulo"
      >
        America/Sao_Paulo
      </option>
      <option
        value="Atlantic/South_Georgia"
      >
        Atlantic/South_Georgia
      </option>
      <option
        value="Atlantic/Azores"
      >
        Atlantic/Azores
      </option>
      <option
        value="Atlantic/Cape_Verde"
      >
        Atlantic/Cape_Verde
      </option>
      <option
        value="Africa/Casablanca"
      >
        Africa/Casablanca
      </option>
      <option
        value="Africa/Monrovia"
      >
        Africa/Monrovia
      </option>
      <option
        value="Europe/London"
      >
        Europe/London
      </option>
      <option
        value="Africa/Algiers"
      >
        Africa/Algiers
      </option>
      <option
        value="Africa/Windhoek"
      >
        Africa/Windhoek
      </option>
      <option
        value="Europe/Belgrade"
      >
        Europe/Belgrade
      </option>
      <option
        value="Europe/Berlin"
      >
        Europe/Berlin
      </option>
      <option
        value="Europe/Brussels"
      >
        Europe/Brussels
      </option>
      <option
        value="Europe/Warsaw"
      >
        Europe/Warsaw
      </option>
      <option
        value="Africa/Cairo"
      >
        Africa/Cairo
      </option>
      <option
        value="Africa/Harare"
      >
        Africa/Harare
      </option>
      <option
        value="Asia/Amman"
      >
        Asia/Amman
      </option>
      <option
        value="Asia/Beirut"
      >
        Asia/Beirut
      </option>
      <option
        value="Asia/Jerusalem"
      >
        Asia/Jerusalem
      </option>
      <option
        value="Europe/Athens"
      >
        Europe/Athens
      </option>
      <option
        value="Europe/Helsinki"
      >
        Europe/Helsinki
      </option>
      <option
        value="Europe/Minsk"
      >
        Europe/Minsk
      </option>
      <option
        value="Europe/Paris"
      >
        Europe/Paris
      </option>
      <option
        value="Africa/Nairobi"
      >
        Africa/Nairobi
      </option>
      <option
        value="Asia/Baghdad"
      >
        Asia/Baghdad
      </option>
      <option
        value="Asia/Kuwait"
      >
        Asia/Kuwait
      </option>
      <option
        value="Europe/Moscow"
      >
        Europe/Moscow
      </option>
      <option
        value="Asia/Tehran"
      >
        Asia/Tehran
      </option>
      <option
        value="Asia/Baku"
      >
        Asia/Baku
      </option>
      <option
        value="Asia/Muscat"
      >
        Asia/Muscat
      </option>
      <option
        value="Asia/Tbilisi"
      >
        Asia/Tbilisi
      </option>
      <option
        value="Asia/Yerevan"
      >
        Asia/Yerevan
      </option>
      <option
        value="Asia/Kabul"
      >
        Asia/Kabul
      </option>
      <option
        value="Asia/Karachi"
      >
        Asia/Karachi
      </option>
      <option
        value="Asia/Tashkent"
      >
        Asia/Tashkent
      </option>
      <option
        value="Asia/Yekaterinburg"
      >
        Asia/Yekaterinburg
      </option>
      <option
        value="Asia/Colombo"
      >
        Asia/Colombo
      </option>
      <option
        value="Asia/Kolkata"
      >
        Asia/Kolkata
      </option>
      <option
        value="Asia/Kathmandu"
      >
        Asia/Kathmandu
      </option>
      <option
        value="Asia/Dhaka"
      >
        Asia/Dhaka
      </option>
      <option
        value="Asia/Novosibirsk"
      >
        Asia/Novosibirsk
      </option>
      <option
        value="Asia/Rangoon"
      >
        Asia/Rangoon
      </option>
      <option
        value="Asia/Bangkok"
      >
        Asia/Bangkok
      </option>
      <option
        value="Asia/Krasnoyarsk"
      >
        Asia/Krasnoyarsk
      </option>
      <option
        value="Asia/Hong_Kong"
      >
        Asia/Hong_Kong
      </option>
      <option
        value="Asia/Irkutsk"
      >
        Asia/Irkutsk
      </option>
      <option
        value="Asia/Kuala_Lumpur"
      >
        Asia/Kuala_Lumpur
      </option>
      <option
        value="Asia/Taipei"
      >
        Asia/Taipei
      </option>
      <option
        value="Australia/Perth"
      >
        Australia/Perth
      </option>
      <option
        value="Asia/Seoul"
      >
        Asia/Seoul
      </option>
      <option
        value="Asia/Tokyo"
      >
        Asia/Tokyo
      </option>
      <option
        value="Asia/Yakutsk"
      >
        Asia/Yakutsk
      </option>
      <option
        value="Australia/Adelaide"
      >
        Australia/Adelaide
      </option>
      <option
        value="Australia/Darwin"
      >
        Australia/Darwin
      </option>
      <option
        value="Asia/Vladivostok"
      >
        Asia/Vladivostok
      </option>
      <option
        value="Australia/Brisbane"
      >
        Australia/Brisbane
      </option>
      <option
        value="Australia/Hobart"
      >
        Australia/Hobart
      </option>
      <option
        value="Australia/Sydney"
      >
        Australia/Sydney
      </option>
      <option
        value="Pacific/Guam"
      >
        Pacific/Guam
      </option>
      <option
        value="Australia/Lord_Howe"
      >
        Australia/Lord_Howe
      </option>
      <option
        value="Asia/Magadan"
      >
        Asia/Magadan
      </option>
      <option
        value="Pacific/Norfolk"
      >
        Pacific/Norfolk
      </option>
      <option
        value="Pacific/Auckland"
      >
        Pacific/Auckland
      </option>
      <option
        value="Pacific/Fiji"
      >
        Pacific/Fiji
      </option>
      <option
        value="Pacific/Tongatapu"
      >
        Pacific/Tongatapu
      </option>
    </select>
    <div
      class="invalid-feedback"
    />
    <small
      class="form-text text-muted"
    >
      <div>
        Time Zone
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbTimezone check change 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <select
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
    >
      <option
        value="Etc/UTC"
      >
        Etc/UTC
      </option>
      <option
        value="Etc/GMT+12"
      >
        Etc/GMT+12
      </option>
      <option
        value="Pacific/Midway"
      >
        Pacific/Midway
      </option>
      <option
        value="Pacific/Honolulu"
      >
        Pacific/Honolulu
      </option>
      <option
        value="Pacific/Marquesas"
      >
        Pacific/Marquesas
      </option>
      <option
        value="America/Anchorage"
      >
        America/Anchorage
      </option>
      <option
        value="Pacific/Pitcairn"
      >
        Pacific/Pitcairn
      </option>
      <option
        value="America/Los_Angeles"
      >
        America/Los_Angeles
      </option>
      <option
        value="America/Tijuana"
      >
        America/Tijuana
      </option>
      <option
        value="America/Chihuahua"
      >
        America/Chihuahua
      </option>
      <option
        value="America/Denver"
      >
        America/Denver
      </option>
      <option
        value="America/Phoenix"
      >
        America/Phoenix
      </option>
      <option
        value="America/Chicago"
      >
        America/Chicago
      </option>
      <option
        value="America/Guatemala"
      >
        America/Guatemala
      </option>
      <option
        value="America/Mexico_City"
      >
        America/Mexico_City
      </option>
      <option
        value="America/Regina"
      >
        America/Regina
      </option>
      <option
        value="America/Bogota"
      >
        America/Bogota
      </option>
      <option
        value="America/Indiana/Indianapolis"
      >
        America/Indiana/Indianapolis
      </option>
      <option
        value="America/New_York"
      >
        America/New_York
      </option>
      <option
        value="America/Caracas"
      >
        America/Caracas
      </option>
      <option
        value="America/Guyana"
      >
        America/Guyana
      </option>
      <option
        value="America/Halifax"
      >
        America/Halifax
      </option>
      <option
        value="America/La_Paz"
      >
        America/La_Paz
      </option>
      <option
        value="America/Manaus"
      >
        America/Manaus
      </option>
      <option
        value="America/Santiago"
      >
        America/Santiago
      </option>
      <option
        value="America/St_Johns"
      >
        America/St_Johns
      </option>
      <option
        value="America/Argentina/Buenos_Aires"
      >
        America/Argentina/Buenos_Aires
      </option>
      <option
        value="America/Godthab"
      >
        America/Godthab
      </option>
      <option
        value="America/Montevideo"
      >
        America/Montevideo
      </option>
      <option
        value="America/Sao_Paulo"
      >
        America/Sao_Paulo
      </option>
      <option
        value="Atlantic/South_Georgia"
      >
        Atlantic/South_Georgia
      </option>
      <option
        value="Atlantic/Azores"
      >
        Atlantic/Azores
      </option>
      <option
        value="Atlantic/Cape_Verde"
      >
        Atlantic/Cape_Verde
      </option>
      <option
        value="Africa/Casablanca"
      >
        Africa/Casablanca
      </option>
      <option
        value="Africa/Monrovia"
      >
        Africa/Monrovia
      </option>
      <option
        value="Europe/London"
      >
        Europe/London
      </option>
      <option
        value="Africa/Algiers"
      >
        Africa/Algiers
      </option>
      <option
        value="Africa/Windhoek"
      >
        Africa/Windhoek
      </option>
      <option
        value="Europe/Belgrade"
      >
        Europe/Belgrade
      </option>
      <option
        value="Europe/Berlin"
      >
        Europe/Berlin
      </option>
      <option
        value="Europe/Brussels"
      >
        Europe/Brussels
      </option>
      <option
        value="Europe/Warsaw"
      >
        Europe/Warsaw
      </option>
      <option
        value="Africa/Cairo"
      >
        Africa/Cairo
      </option>
      <option
        value="Africa/Harare"
      >
        Africa/Harare
      </option>
      <option
        value="Asia/Amman"
      >
        Asia/Amman
      </option>
      <option
        value="Asia/Beirut"
      >
        Asia/Beirut
      </option>
      <option
        value="Asia/Jerusalem"
      >
        Asia/Jerusalem
      </option>
      <option
        value="Europe/Athens"
      >
        Europe/Athens
      </option>
      <option
        value="Europe/Helsinki"
      >
        Europe/Helsinki
      </option>
      <option
        value="Europe/Minsk"
      >
        Europe/Minsk
      </option>
      <option
        value="Europe/Paris"
      >
        Europe/Paris
      </option>
      <option
        value="Africa/Nairobi"
      >
        Africa/Nairobi
      </option>
      <option
        value="Asia/Baghdad"
      >
        Asia/Baghdad
      </option>
      <option
        value="Asia/Kuwait"
      >
        Asia/Kuwait
      </option>
      <option
        value="Europe/Moscow"
      >
        Europe/Moscow
      </option>
      <option
        value="Asia/Tehran"
      >
        Asia/Tehran
      </option>
      <option
        value="Asia/Baku"
      >
        Asia/Baku
      </option>
      <option
        value="Asia/Muscat"
      >
        Asia/Muscat
      </option>
      <option
        value="Asia/Tbilisi"
      >
        Asia/Tbilisi
      </option>
      <option
        value="Asia/Yerevan"
      >
        Asia/Yerevan
      </option>
      <option
        value="Asia/Kabul"
      >
        Asia/Kabul
      </option>
      <option
        value="Asia/Karachi"
      >
        Asia/Karachi
      </option>
      <option
        value="Asia/Tashkent"
      >
        Asia/Tashkent
      </option>
      <option
        value="Asia/Yekaterinburg"
      >
        Asia/Yekaterinburg
      </option>
      <option
        value="Asia/Colombo"
      >
        Asia/Colombo
      </option>
      <option
        value="Asia/Kolkata"
      >
        Asia/Kolkata
      </option>
      <option
        value="Asia/Kathmandu"
      >
        Asia/Kathmandu
      </option>
      <option
        value="Asia/Dhaka"
      >
        Asia/Dhaka
      </option>
      <option
        value="Asia/Novosibirsk"
      >
        Asia/Novosibirsk
      </option>
      <option
        value="Asia/Rangoon"
      >
        Asia/Rangoon
      </option>
      <option
        value="Asia/Bangkok"
      >
        Asia/Bangkok
      </option>
      <option
        value="Asia/Krasnoyarsk"
      >
        Asia/Krasnoyarsk
      </option>
      <option
        value="Asia/Hong_Kong"
      >
        Asia/Hong_Kong
      </option>
      <option
        value="Asia/Irkutsk"
      >
        Asia/Irkutsk
      </option>
      <option
        value="Asia/Kuala_Lumpur"
      >
        Asia/Kuala_Lumpur
      </option>
      <option
        value="Asia/Taipei"
      >
        Asia/Taipei
      </option>
      <option
        value="Australia/Perth"
      >
        Australia/Perth
      </option>
      <option
        value="Asia/Seoul"
      >
        Asia/Seoul
      </option>
      <option
        value="Asia/Tokyo"
      >
        Asia/Tokyo
      </option>
      <option
        value="Asia/Yakutsk"
      >
        Asia/Yakutsk
      </option>
      <option
        value="Australia/Adelaide"
      >
        Australia/Adelaide
      </option>
      <option
        value="Australia/Darwin"
      >
        Australia/Darwin
      </option>
      <option
        value="Asia/Vladivostok"
      >
        Asia/Vladivostok
      </option>
      <option
        value="Australia/Brisbane"
      >
        Australia/Brisbane
      </option>
      <option
        value="Australia/Hobart"
      >
        Australia/Hobart
      </option>
      <option
        value="Australia/Sydney"
      >
        Australia/Sydney
      </option>
      <option
        value="Pacific/Guam"
      >
        Pacific/Guam
      </option>
      <option
        value="Australia/Lord_Howe"
      >
        Australia/Lord_Howe
      </option>
      <option
        value="Asia/Magadan"
      >
        Asia/Magadan
      </option>
      <option
        value="Pacific/Norfolk"
      >
        Pacific/Norfolk
      </option>
      <option
        value="Pacific/Auckland"
      >
        Pacific/Auckland
      </option>
      <option
        value="Pacific/Fiji"
      >
        Pacific/Fiji
      </option>
      <option
        value="Pacific/Tongatapu"
      >
        Pacific/Tongatapu
      </option>
    </select>
    <div
      class="invalid-feedback"
    >
      Value should not be empty
    </div>
    <small
      class="form-text text-muted"
    >
      <div>
        Time Zone
      </div>
    </small>
  </div>
</div>
`;
